# catan

./: Cargo.toml
desktop_app/: Cargo.toml
desktop_app/src/: data.rs  main.rs  player.rs  starting.rs  state.rs
desktop_app/src/draw/: building.rs  mod.rs  port.rs  road.rs  texts_horizontal.rs  texts_vertical.rs  tile.rs
desktop_app/src/page/: game.rs  main.rs  mod.rs  reduce.rs
lib/: Cargo.toml
lib/src/: building.rs  game_coords.rs  game_manager.rs  lib.rs  player.rs  port.rs  position.rs  ressource_manager.rs  starting.rs  tile.rs
lib/src/game_manager/: buildings.rs  hroads.rs  mod.rs  players.rs  vroads.rs
macroquadstate/: Cargo.toml
macroquadstate/src/: button.rs  center.rs  drawable.rs  empty.rs  fill.rs  fix_circle.rs  fix_hex.rs  fix_rect.rs  fix_text.rs  h_stack.rs  lib.rs  line.rs  margin.rs  offset.rs  range.rs  space.rs  state.rs  tests.rs  v_stack.rs  vec_h_stack.rs  vec_v_stack.rs  wrapper.rs  z_stack.rs
src/: game_manager.rs  main.rs  player.rs  position.rs  ressource.rs  ressource_manager.rs
