[package]
name = "catan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
uninit-assumed-init = "allow"
pedantic = "deny"
missing-const-for-fn = "deny"
unwrap-used = "deny"
unused-enumerate-index = "deny"
as-underscore = "deny"
get-unwrap = "deny"
str-to-string = "deny"
too-many-lines = "deny"
todo = "warn"

[dependencies]
profiling = { version = "=1.0.14", features = ["profile-with-puffin"] }
catan_lib = { path = "../lib" }
macroquad = "=0.4"
puffin = "=0.19.0"
puffin_http = "=0.16.0"
